<resources>
    <string name="app_name">Adybelli</string>
    <string name="home">Baş sahypa</string>
    <string name="search">Kategoriýa</string>
    <string name="fav">Halanlarym</string>
    <string name="basket">Sebet</string>
    <string name="profile">Ulanyjy</string>
    <string name="login_desc">Hoş geldiňiz , adybelli platformasyna girmek üçin email, ulanyjy adyňyz ýa-da telefon belgi bilen açar sözüni ýazyp geçip bilersiňiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="showPassword"><u>Görkez</u></string>
    <string name="forgotPassword"><u>Açar sözümi unutdym</u></string>
    <string name="t1">Hasabyma girmek bilen, Adybelliniň</string>
    <string name="t2"><u>ulanyş kadalary</u></string>
    <string name="t3"> bilen ylalaşýaryn.</string>
    <string name="tassykla">Tassyklamak</string>
    <string name="login_motiv">AGZA BOL WE MÜMKINÇILIKLERDEN PEÝDALAN</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</string>
    <string name="sit" translatable="false">sit amet, consectetur adipiscing elit</string>
    <string name="agza_bol_desc">Telefon belgiňize baran sms kodyny ýazyň we programmanyň mümkinçiliklerini ulanyň</string>
    <string name="no_code"><u>Kod gelmedi</u></string>
    <string name="t4"><u>Ulanyş kadalaryny</u></string>
    <string name="t5">okadym we razy</string>
    <string name="hidePassword"><u>Gizle</u></string>
    <string name="clear"><u>Arassala</u></string>
    <string name="search_title">Gözleg</string>
    <string name="size_fit_guide"><u>Laýyk ölçeg boýunça gollanma</u></string>
    <string name="download_faktura"><u>Enjamyňyza ýükläň (PDF)</u></string>
    <string name="continueShopping"><u>Söwda dowam etmek</u></string>
    <string name="pleaseWait"><u>Biraz garaşyň</u></string>
    <string name="downloadingData"><u>Maglumatlar ýüklenýär</u></string>
    <string name="noInternet"><u>Internet yok</u></string>
    <string name="retry">Gaýtadan</string>
    <string name="continueValue">Dowam et</string>
    <string name="checkYourInternet">Internediňiz barlaň we täzeden synanyşyň</string>
    <string name="no_data">Maglumat tapylmady</string>
    <string name="empty">Gözlege degişli haryt tapylmady</string>
    <string name="kod_gelmedi"><u>Kod gelmedi</u></string>
    <string name="add_to_kard">Sebede goş</string>
    <string name="color_variants">Reňk görnüşleri :</string>
    <string name="size">Ölçeg saýla :</string>
    <string name="details">Doly maglumat</string>
    <string name="also">Meňzeş harytlar</string>
    <string name="resently">Soňky görülenler</string>
    <string name="find">Gözleg</string>
    <string name="add_address">Täze salgylar</string>
    <string name="name_of_address">Salgyňyzy atlandyryň:# (öý, iş, okuw)</string>
    <string name="phone_number">Telefon belgiňiz:</string>
    <string name="address">Salgyňyzy ýazyň (köçäňiz, öý belgiňizi ýazyň)</string>
    <string name="accept">Tassyklamak</string>
    <string name="successfully_added_card">Sebede üstünlikli goşuldy</string>
    <string name="color">Reňk :</string>
    <string name="size_">Ölçeg :</string>
    <string name="cost">Baha:</string>
    <string name="fast_buy">Çalt satyn almak</string>
    <string name="go_to_card">Sebede git</string>
    <string name="delivery">Gowşurmak:</string>
    <string name="size__">Ölçegi</string>
    <string name="delete">Aýyr</string>
    <string name="language">Dil</string>
    <string name="about_order">Sargyt barada</string>
    <string name="sum_cost">Harytlaryň jemi bahasy :</string>
    <string name="order_delivery_cost">Eltip bermek hyzmaty :</string>
    <string name="free_cost">Arzanladyş</string>
    <string name="card_free_cost">Kart Skidka (3%) :</string>
    <string name="total_cost">JEMI BAHASY :</string>
    <string name="select_count">Sanyny saýla</string>
    <string name="delete_add_fav">Halanlaryma goş we aýyr</string>
    <string name="my_address">Salgylarym</string>
    <string name="to_receive_code">Tassyklaýjy kody almak üçin telefon belgiňizi giriziň</string>
    <string name="my_basket">Sebet</string>
    <string name="accept_order">Sebedi tassykla</string>
    <string name="change_mail">Email üýtgetmek</string>
    <string name="to_change_mail">Emaili adresiňizi barlaň, tassyklaýjy salgysyny basyň we profiliňizi tassyklaň</string>
    <string name="email">Email</string>
    <string name="change_password">Paroly çalyşmak</string>
    <string name="to_change_password">Paroly çalyşmak üçin aşakdaky maglumatlary dolduryň</string>
    <string name="current_password">Häzirki parol</string>
    <string name="new_password">Täze parol</string>
    <string name="confirm_password">Täze parol tassyklaň</string>
    <string name="code">Tassyklayjy kod</string>
    <string name="colour">Reňk</string>
    <string name="filter">Tertiple</string>
    <string name="cost_">Bahasy</string>
    <string name="to_create_account">Applikasiýanyň mümkinçiliklerinden peýdalanmak üçin aşakdaky maglumatlary dolduruň</string>
    <string name="name">Adyňyz</string>
    <string name="surname">Familýaňyz</string>
    <string name="gender">Jynsyňyz</string>
    <string name="man">Erkek</string>
    <string name="women">Zenan</string>
    <string name="user">Agza</string>
    <string name="fill">Agzalyk maglumatlaryny doly dolduruň we bal gazanyň</string>
    <string name="birthday">Doglan senesi</string>
    <string name="if_write_birthday">*Doglan senäňizi belleseňiz doglan günüňizde arzanladyşlar teklip ediler</string>
    <string name="to_filter">Filterlemek</string>
    <string name="by_gender">Jynsy boýunça</string>
    <string name="popular_categories">Meşhur kategoriýalar</string>
    <string name="top_sellers">Iň köp satylan harytlar</string>
    <string name="brands">Markalar</string>
    <string name="new_arrivals">Täze harytlar</string>
    <string name="login">Içeri gir</string>
    <string name="create_account">Agza bolmak</string>
    <string name="full_information_about_order">Doly maglumatlary</string>
    <string name="order_code">Sargyt kody:</string>
    <string name="order_date">Sargydyň berilen wagty:</string>
    <string name="product_count">Harytlaryň sany: </string>
    <string name="faktura_hasabaty">Hasap faktura</string>
    <string name="address_info">Salgy Maglumatlary</string>
    <string name="cost_title">Töleg</string>
    <string name="cash">Nagt</string>
    <string name="my_orders">Sargytlarym</string>
    <string name="time_delivery">Gowşurma wagty :</string>
    <string name="work_time">Iş wagty :</string>
    <string name="type_cost">Töleg görnüşi</string>
    <string name="cash_on_door">Gapyda nagt töleg</string>
    <string name="terminal_on_door">Gapyda terminal</string>
    <string name="online_buy">Online töleg</string>
    <string name="available">Gije-gündiz ulgamda (+993) 62 73-39-99</string>
    <string name="sort">Tertiplemek</string>
    <string name="filters">Filter</string>
    <string name="help">Kömek</string>
    <string name="logout">Ulgamdan çykmak</string>
    <string name="want_send_mail">Faktura hasabatyny mail ugratmak isleýärsiňizmi ýa-da enjamyňyza göçürüp almak</string>
    <string name="send_to_mail">E-mail ugrat</string>
    <string name="or">Ýa-da</string>
    <string name="total_info">Doly maglumat</string>
    <string name="accepted">Kabul edildi</string>
    <string name="cost_asc">Baha artan</string>
    <string name="pay_attention">Üns Beriň</string>
    <string name="do_you_want_delete">Çyndanam pozmak isleýäňizmi?</string>
    <string name="yes">Hawa</string>
    <string name="cant_delete">Pozup bolmady!</string>
    <string name="no">Ýok</string>
    <string name="chnage_address">Salgyny üýtget</string>
    <string name="edit">Üýtget</string>
    <string name="fill_out">Maglumatlary doly girizin!</string>
    <string name="something_went_wrong">Yalnyshlyk yuze cykdy!</string>
    <string name="count">Sany: </string>
    <string name="count_product"> sany haryt</string>
    <string name="category">Kategoriýalar</string>
    <string name="regions">Welayat</string>
    <string name="sub_locations">Etrap</string>
    <string name="not_found_account">Hasap tapylmady!</string>
    <string name="do_you_want_sign_up">Agza bolmak isleýärsiňizmi?</string>
    <string name="cancel">Aýyr</string>
    <string name="default_sort">Başdaky ýagdaý</string>
    <string name="cost_desc">Baha kemelen</string>
    <string name="do_you_want_logout">Ynamyňyz barmy?</string>
    <string name="terms_of_use">Ulanyş kadalary</string>
    <string name="no_fav">Halanlarym ýok</string>
    <string name="day">gün</string>
    <string name="success_order">Sargyt üstünlikli tamamlandy</string>
    <string name="pending">Garaşylýar</string>
    <string name="check_terms_of_use">Ulanyş kadalaryny kabul ediň!</string>
    <string name="no_login">Hasabyňyz ýok</string>
    <string name="must_login">Bu bölümden peýdalanmak üçin ulgama girmeli!</string>
    <string name="all_brands"><u>Hemmesini gör</u></string>
    <string name="last">Soňky</string>
    <string name="link_to_mail">E-mail poçtaňyza link ugradyldy!</string>
    <string name="select_gender">Jynsyňyzy saýlaň</string>
    <string name="save">Ýatda saklat</string>
    <string name="empty_basket">Sebetde haryt ýok</string>
    <string name="empty_basket_message">Haryt goşmak üçin söwda başlaň</string>
    <string name="if_have_any_question">Soraglar ýüze çykan ýagdaýynda müşderi hyzmatlary bilen habarlaşyp bilersiňiz. (+993) 62 73-39-99</string>
    <string name="about">Biz barada</string>
    <string name="selected_size">Ölçegiňizi saýlaň: </string>
    <string name="delivery_day">Takmyny gowşurma wagty: </string>
    <string name="customer">Müşderi</string>
    <string name="phone_number_title">Telefon belgisi </string>
    <string name="address_information">Salgy maglumatlary</string>
    <string name="address_ady">Ady</string>
    <string name="region">Welaýat</string>
    <string name="city">Şäher, Etrap</string>
    <string name="customer_information">Müşderi maglumatlary:</string>
    <string name="order_information">Sargyt maglumatlary:</string>
    <string name="tb">T/b</string>
    <string name="product_name">Harydyň ady</string>
    <string name="product_code">Harydyň kody</string>
    <string name="mukdary">Mukdary</string>
    <string name="status">Status</string>
    <string name="received">Kabul edildi</string>
    <string name="on_the_way">Kargoda</string>
    <string name="delivered">Eltip berildi</string>
    <string name="canceled">Sargyt Ýatyryldy</string>
    <string name="cancel_order">Sargydy ýatyrmak</string>
    <string name="cancel_order_question">Sargydy ýatyrmak isleýärsiňizmi?</string>
    <string name="see_all_ru">Все они</string>
    <string name="see_all_tm">Hemmesi</string>
    <string name="successfully">Üstünlikli hasaba alyndy!</string>
    <string name="verCode">Gelen sms tassyklaýjy kody giriziň!</string>
    <string name="no_product_in_stock">Bu haryt gutardy!</string>
    <string name="try_again">Täzeden synanş</string>
    <string name="to_fav">Halanlaryma goşmak üçin söwda başlaň</string>
    <string name="salgy">Salgysy</string>
    <string name="profil">Profil</string>
    <string name="count_of_products">Harytlaryň sany: </string>
    <string name="discount_products">Arzanladyşdaky harytlar</string>
    <string name="email_ready">Email poçtaňyzy barlaň</string>
    <string name="salgyny_go_mak">Salgyny goşmak</string>
    <string name="logout_">Ulgamdan çykmak</string>
    <string name="share">Paýlaşmak</string>
    <string name="remove_address">Salgyny aýyr?</string>
    <string name="ok">Bolýar</string>
    <string name="phone_number_">Telefon belgiňiz</string>
    <string name="type_cost_">Töleg usuly</string>
    <string name="count_">Sany</string>
</resources>