<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/main"/>
    <item
        android:id="@+id/search"
        android:title="@string/category"
        android:enabled="true"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/favourite"
        android:title="@string/fav"
        android:enabled="true"
        android:icon="@drawable/heart"/>
    <item
        android:id="@+id/basket"
        android:title="@string/basket"
        android:enabled="true"
        android:icon="@drawable/shopping_bag"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profil"
        android:enabled="true"
        android:icon="@drawable/user"/>
</menu>